# InsightFlow

./: README.md  render.yaml
backend/: .env.example  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml  run_server.py
backend/alembic/: env.py
backend/alembic/versions/: 20260219_0001_init_foundation.py  20260227_0002_add_surveys.py  20260227_0003_add_feedback_and_insights.py  20260227_0004_add_reports_and_events.py  20260409_0005_add_workspace_invitations.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: deps.py  router.py
backend/app/api/v1/endpoints/: auth.py  feedback.py  health.py  projects.py  reporting.py  surveys.py  workspaces.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  feedback.py  hardening.py  mixins.py  project.py  survey.py  user.py  workspace.py
backend/app/schemas/: auth.py  feedback.py  project.py  reporting.py  survey.py  workspace.py
backend/app/services/: __init__.py  email.py  events.py  insights.py  llm.py  reporting.py
backend/tests/: conftest.py  test_auth.py  test_feedback_phase2.py  test_health.py  test_llm_service.py  test_phase3_reporting.py  test_surveys.py  test_workspace_project.py
docs/: 01-development-plan.md  02-technical-development-document.md  03-full-route-spec.md  04-schema-contracts.md  05-screen-specification.md
frontend/: README.md  index.html  public-survey.html  reset-password.html
frontend/pages/: analytics.html  dashboard.html  events.html  insights.html  login.html  personas.html  projects.html  (+6 more)
(+47 files in other folders)
